--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,5 +22,7 @@ spring:
         format_sql: true # ???? query? ???
     open-in-view: false
 
-logging.level:
-  org.hibernate.SQL: debug
+logging:
+#  config: classpath:logback/logback.xml
+  level:
+    org.hibernate.SQL: debug
