--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'com.h2database:h2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
 }
 
 tasks.named('test') {
