--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none # ??????? ??? ? ??????? ????? ?? ??? ??
+      ddl-auto: update # ??????? ??? ? ??????? ????? ?? ??? ??
       
     properties:
       hibernate:
@@ -23,6 +23,6 @@ spring:
     open-in-view: false
 
 logging:
-#  config: classpath:logback/logback.xml
+#  config: classpath:logback/logback-spring.xml
   level:
     org.hibernate.SQL: debug
