--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,12 @@ logging:
 #  config: classpath:logback/logback-spring.xml
   level:
     org.hibernate.SQL: debug
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: '*'
