--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,6 @@ spring:
     open-in-view: false
 
 logging:
-#  config: classpath:logback/logback.xml
+  config: classpath:logback/logback-spring.xml
   level:
     org.hibernate.SQL: debug
