feat(testing/week2-metric) - Prometheus 설정 추가
Signed-off-by: inspire12 <ox4443@naver.com>

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,9 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
